// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bullet renders correctly with a text 1`] = `
<DocumentFragment>
  .cache-1k74lo7-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="cache-1k74lo7-StyledContainer e11loam60"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet renders correctly with an icon 1`] = `
<DocumentFragment>
  .cache-1k74lo7-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.cache-qx391f-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 50%;
  width: 50%;
  min-width: 50%;
  min-height: 50%;
}

<div
    class="cache-1k74lo7-StyledContainer e11loam60"
  >
    <svg
      class="cache-qx391f-sizeStyles e1gt4cfo0"
      viewBox="0 0 24 24"
    >
      <path
        d="M13.98 2.97a9 9 0 1 0 0 18c1.83 0 3.53-.55 4.95-1.48a9 9 0 0 1-4.05-7.52 9 9 0 0 1 4.05-7.52c-1.42-.94-3.12-1.48-4.95-1.48zm0 1.8a7.2 7.2 0 0 1 1.4.14l.28.06-.1.11c-1.5 1.81-2.39 4.09-2.48 6.52l-.01.37c0 2.57.91 4.99 2.48 6.89l.1.11-.28.06a7.3 7.3 0 0 1-1.05.13l-.36.01a7.2 7.2 0 0 1 0-14.4z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Bullet sentiment render danger 1`] = `
<DocumentFragment>
  .cache-oil5vi-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #b3144d;
  background: #ffebf2;
  border: 1px solid #ffebf2;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="cache-oil5vi-StyledContainer e11loam60"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet sentiment render disabled 1`] = `
<DocumentFragment>
  .cache-1n3x46n-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #727683;
  background: #e9eaeb;
  border: none;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="cache-1n3x46n-StyledContainer e11loam60"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet sentiment render info 1`] = `
<DocumentFragment>
  .cache-2edmfk-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #005da3;
  background: #e0f2ff;
  border: 1px solid #e0f2ff;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="cache-2edmfk-StyledContainer e11loam60"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet sentiment render neutral 1`] = `
<DocumentFragment>
  .cache-1k74lo7-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="cache-1k74lo7-StyledContainer e11loam60"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet sentiment render primary 1`] = `
<DocumentFragment>
  .cache-j41hqp-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #641cb3;
  background: #f1eefc;
  border: 1px solid #f1eefc;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="cache-j41hqp-StyledContainer e11loam60"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet sentiment render secondary 1`] = `
<DocumentFragment>
  .cache-wex34o-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #ac22e7;
  background: #f9ebff;
  border: 1px solid #f9ebff;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="cache-wex34o-StyledContainer e11loam60"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet sentiment render success 1`] = `
<DocumentFragment>
  .cache-1h0t7zq-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #22674e;
  background: #daf6ec;
  border: 1px solid #daf6ec;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="cache-1h0t7zq-StyledContainer e11loam60"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet sentiment render warning 1`] = `
<DocumentFragment>
  .cache-8jzxlw-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #7c5400;
  background: #fff6e6;
  border: 1px solid #fff6e6;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="cache-8jzxlw-StyledContainer e11loam60"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet size render medium 1`] = `
<DocumentFragment>
  .cache-1k74lo7-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="cache-1k74lo7-StyledContainer e11loam60"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet size render small 1`] = `
<DocumentFragment>
  .cache-rxjap1-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
  width: 24px;
  height: 24px;
  font-size: 14px;
}

<div
    class="cache-rxjap1-StyledContainer e11loam60"
  >
    1
  </div>
</DocumentFragment>
`;
